--- a/BaltaStore.Api/appsettings.json
+++ b/BaltaStore.Api/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "connectionString": "Server=localhost;Database=BaltaIO;User Id=sa;Password=jp23mr05;",
+  "connectionString": "Server=localhost;Database=BaltaIO;User Id=sa;Password=senhabddev;",
   "ApplicationInsights": 
     {
       "InstrumentationKey": "73fc1f50-6bd9-4954-a52c-9135b8fcda8a"
